# performance-demos

./: .gitmodules  Makefile  README.md  benchmark-acc-offload.sh  benchmark-mbedTLS-vector.sh  benchmark-omp-multi.sh  benchmark-single-core-optimizations.sh
ATMUX/: Makefile
ATMUX/pwa-omp-multi/: atmux.c
ATMUX/pwa-omp-multi/lib/: CRSMatrix.c  Matrix2D.h  Vector.c  Vector.h
ATMUX/serial/: CMakeLists.txt  Makefile  atmux.c
ATMUX/serial/lib/: CRSMatrix.h  Matrix2D.c
CANNY/: Makefile
CANNY/pwa-omp-multi/: Makefile  canny.c
CANNY/serial/: CMakeLists.txt  Makefile  canny.c
COULOMB/: Makefile
COULOMB/pwa-acc-offload/: Makefile  coulomb.c
COULOMB/pwa-omp-multi/: Makefile  Matrix2D.c  Matrix2D.h  Vector.h  coulomb.c
COULOMB/serial/: CMakeLists.txt  Makefile  Vector.c  coulomb.c
HACCmk/: Makefile
HACCmk/pwa-omp-multi/: CheckAll  RunAll  main.c
HACCmk/pwa-omp-multi/01th/: HACCmk_1_1.cobaltlog  HACCmk_1_1.error  HACCmk_1_1.output
HACCmk/pwa-omp-multi/02th/: HACCmk_1_2.cobaltlog  HACCmk_1_2.error  HACCmk_1_2.output  RunMe_02th.sh
HACCmk/pwa-omp-multi/04th/: HACCmk_1_4.cobaltlog  HACCmk_1_4.error  HACCmk_1_4.output
HACCmk/pwa-omp-multi/08th/: HACCmk  HACCmk_1_8.cobaltlog  HACCmk_1_8.error  HACCmk_1_8.output
HACCmk/pwa-omp-multi/16th/: HACCmk_1_16.cobaltlog  HACCmk_1_16.error  HACCmk_1_16.output  RunMe_16th.sh
HACCmk/pwa-omp-multi/32th/: HACCmk_1_32.cobaltlog  HACCmk_1_32.error  HACCmk_1_32.output  RunMe_32th.sh
HACCmk/pwa-omp-multi/64th/: HACCmk_1_64.cobaltlog  HACCmk_1_64.error  HACCmk_1_64.output
HACCmk/serial/: 00README  CMakeLists.txt  Makefile  Step10_orig.c  compile_commands.json  main.c  pw.json
HACCmk/serial/01th/: RunMe_01th.sh
HACCmk/serial/04th/: RunMe_04th.sh
HACCmk/serial/08th/: RunMe_08th.sh
HACCmk/serial/64th/: RunMe_64th.sh
MATMUL/: Makefile
MATMUL/pwa-acc-offload/: Makefile  main.c
MATMUL/pwa-acc-offload/include/: clock.h
MATMUL/pwa-omp-multi/: Makefile  main.c  matrix.c
MATMUL/serial/: CMakeLists.txt  Makefile  clock.c  main.c
MATMUL/serial/include/: matrix.h
NPB_CG/: Makefile
NPB_CG/pwa-omp-multi/: Makefile
NPB_CG/pwa-omp-multi/CG/: cg.c
NPB_CG/pwa-omp-multi/config/: make.def
NPB_CG/pwa-omp-multi/sys/: setparams
NPB_CG/serial/: .gitignore  CMakeLists.txt  Makefile
NPB_CG/serial/CG/: CMakeLists.txt  Makefile  npbparams.h
NPB_CG/serial/common/: CMakeLists.txt
NPB_CG/serial/sys/: CMakeLists.txt  setparams
PI/: Makefile
PI/pwa-acc-offload/: Makefile  pi.c
PI/pwa-omp-multi/: Makefile  pi.c
PI/serial/: CMakeLists.txt  Makefile  pi.c
VMS/pwa-loop-unswitching/: Makefile  predict.c
VMS/serial/: predict.c
